# grabber

./: .gitignore  LICENSE  MANIFEST.in  README.md  mkdocs.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
demo/: app.py
docs/: index.md
grabber/: __init__.py  _dock_widget.py  _version.py  anchors.py  grabber.py  grabberwidget.py
grabber/_tests/: test_dock_widget.py
src/: grabber.py  mypoints.py
