[metadata]
name = grabber

author = Jordão Bragantini
author_email = jordao.bragantini@gmail.com

license = MIT
description = A tool for contour-based segmentation correction (2D only).
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License


[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    pyift>=0.0.4
    opencv-python-headless>=4.4.0
    scipy>=1.7.2


[options.entry_points] 
napari.plugin = 
    grabber = grabber
